iteration 1 done, should replace h2 with p and correct spacing

--- a/starter-code/css/style.css
+++ b/starter-code/css/style.css
@@ -1,3 +1,28 @@
+
+h2 {
+  text-align: right;
+  padding-right: 100px;
+
+}
+
+span {
+  display:inline-block;
+  padding-right: 100px;
+}
+
+.quantity input {
+  width: 30px;
+}
+
+div.productWrapper {
+  padding-left: 10px;
+}
+
+#wrapper {
+  padding: 50px;
+ }
+
+ 
 input {
   border: solid 1px black;
 }
